@@ -139,6 +139,20 @@ public class Subpopulation implements Group
             }
         catch (CloneNotSupportedException e) { throw new InternalError(); } // never happens
         }
+        
+    /** Resizes the Subpopulation to a new size.  If the size is smaller, then
+    	the Subpopulation is truncated such that the higher indexed individuals
+    	may be deleted.  If the size is larger, then the resulting Subpopulation will have
+    	null individuals (this almost certainly is not what you will want).
+    */
+    
+    public void resize(int toThis)
+        {
+        Individual[] temp = new Individual[toThis];
+        System.arraycopy(individuals, 0, temp, 0, toThis);
+        individuals = temp;
+        }
+
 
     /** Sets all Individuals in the Subpopulation to null, preparing it to be reused. */
     public void clear()
@@ -198,7 +212,7 @@ public class Subpopulation implements Group
                 extraBehavior=FILL;
             else if (extra.equalsIgnoreCase(V_WRAP))
                 extraBehavior=WRAP;
-            else state.output.fatal("Subpouplation given a bad " + P_EXTRA_BEHAVIOR + ": " + extra,
+            else state.output.fatal("Subpopulation given a bad " + P_EXTRA_BEHAVIOR + ": " + extra,
                 base.push(P_EXTRA_BEHAVIOR),def.push(P_EXTRA_BEHAVIOR));
             }
         }
@@ -319,6 +333,7 @@ public class Subpopulation implements Group
         }
         
     /** Prints an entire subpopulation in a form readable by humans, with a verbosity of Output.V_NO_GENERAL. */
+    boolean warned = false;
     public void printSubpopulationForHumans(final EvolutionState state,
         final int log)
         {
@@ -328,7 +343,11 @@ public class Subpopulation implements Group
             state.output.println(INDIVIDUAL_INDEX_PREAMBLE + Code.encode(i), log);
             if (individuals[i] != null)
             	individuals[i].printIndividualForHumans(state, log);
-            else state.output.warnOnce("Null individuals found in subpopulation");
+            else if (!warned)
+            	{
+            	state.output.warnOnce("Null individuals found in subpopulation");
+            	warned = true;  // we do this rather than relying on warnOnce because it is much faster in a tight loop
+            	}
             }
         }
         
