@@ -49,6 +49,12 @@ import ec.util.*;
  <tr><td valign=top><tt><i>base</i>.elite.<i>i</i></tt><br>
  <font size=-1>int >= 0 (default=0)</font></td>
  <td valign=top>(the number of elitist individuals for subpopulation <i>i</i>)</td></tr>
+ <tr><td valign=top><tt><i>base</i>.reduce-by.<i>i</i></tt><br>
+ <font size=-1>int >= 0 (default=0)</font></td>
+ <td valign=top>(how many to reduce subpopulation <i>i</i> by each generation)</td></tr>
+ <tr><td valign=top><tt><i>base</i>.minimum-size.<i>i</i></tt><br>
+ <font size=-1>int >= 2 (default=2)</font></td>
+ <td valign=top>(the minimum size for subpopulation <i>i</i> regardless of reduction)</td></tr>
  <tr><td valign=top><tt><i>base</i>.reevaluate-elites.<i>i</i></tt><br>
  <font size=-1>boolean (default = false)</font></td>
  <td valign=top>(should we reevaluate the elites of subpopulation <i>i</i> each generation?)</td></tr>
@@ -69,8 +75,12 @@ public class SimpleBreeder extends Breeder
     public static final String P_REEVALUATE_ELITES = "reevaluate-elites";
     public static final String P_SEQUENTIAL_BREEDING = "sequential";
     public static final String P_CLONE_PIPELINE_AND_POPULATION = "clone-pipeline-and-population";
+    public static final String P_REDUCE_BY = "reduce-by";
+    public static final String P_MINIMUM_SIZE = "minimum-size";
     /** An array[subpop] of the number of elites to keep for that subpopulation */
     public int[] elite;
+    public int[] reduceBy;
+    public int[] minimumSize;
     public double[] eliteFrac;
     public boolean[] reevaluateElites;
     public boolean sequentialBreeding;
@@ -117,6 +127,10 @@ public class SimpleBreeder extends Breeder
         for(int i = 0; i < size; i++) 
             eliteFrac[i] = elite[i] = NOT_SET;
         reevaluateElites = new boolean[size];
+        reduceBy = new int[size];  // all zero
+        minimumSize = new int[size];
+        for(int i = 0; i < size; i++)
+        	minimumSize[i] = 2;
                 
         sequentialBreeding = state.parameters.getBoolean(base.push(P_SEQUENTIAL_BREEDING), null, false);
         if (sequentialBreeding && (size == 1)) // uh oh, this can't be right
@@ -129,7 +143,15 @@ public class SimpleBreeder extends Breeder
         int defaultSubpop = state.parameters.getInt(new Parameter(Initializer.P_POP).push(Population.P_DEFAULT_SUBPOP), null, 0);
         for(int x=0;x<size;x++)
             {
-            // get elites
+	        reduceBy[x] = state.parameters.getIntWithDefault(base.push(P_REDUCE_BY).push(""+x), null, 0);
+	        if (reduceBy[x] < 0)
+	            state.output.fatal("reduce-by must be set to an integer >= 0.", base.push(P_REDUCE_BY).push(""+x));
+
+ 	        minimumSize[x] = state.parameters.getIntWithDefault(base.push(P_MINIMUM_SIZE).push(""+x), null, 2);
+	        if (minimumSize[x] < 2)
+	            state.output.fatal("minimum-size must be set to an integer >= 2.", base.push(P_MINIMUM_SIZE).push(""+x));
+
+           // get elites
             if (state.parameters.exists(base.push(P_ELITE).push(""+x),null))
                 {
                 if (state.parameters.exists(base.push(P_ELITE_FRAC).push(""+x),null))
@@ -213,6 +235,22 @@ public class SimpleBreeder extends Breeder
             newpop.clear();
             backupPopulation = state.population;  // swap in
             }
+            
+        // maybe resize?
+        for(int i = 0; i < state.population.subpops.length; i++)
+        	{
+        	if (reduceBy[i] > 0)
+        		{
+        		int prospectiveSize = Math.max(
+        								Math.max(state.population.subpops[i].individuals.length - reduceBy[i], minimumSize[i]),
+        									numElites(state, i));
+        		if (prospectiveSize < state.population.subpops[i].individuals.length)  // let's resize!
+        			{
+        			state.output.message("Subpop " + i + " reduced " + state.population.subpops[i].individuals.length + " -> " + prospectiveSize);
+        			newpop.subpops[i].resize(prospectiveSize);
+        			}
+        		}
+        	}
         
         // load elites into top of newpop
         loadElites(state, newpop);
@@ -224,8 +262,7 @@ public class SimpleBreeder extends Breeder
             numThreads = Math.max(numThreads, state.population.subpops[x].individuals.length);
         numThreads = Math.min(numThreads, state.breedthreads);
         if (numThreads < state.breedthreads)
-            state.output.warnOnce("Largest subpopulation size (" + numThreads +") is smaller than number of breedthreads (" + state.breedthreads +
-                "), so fewer breedthreads will be created.");
+            state.output.warnOnce("Largest subpopulation size (" + numThreads +") is smaller than number of breedthreads (" + state.breedthreads + "), so fewer breedthreads will be created.");
             
         int numinds[][] = 
             new int[numThreads][state.population.subpops.length];
