@@ -2333,3 +2333,5 @@ Version		Change Log
 		population but provide a warning.
 	GPNode adds ordering constraints to Graphviz output
 	Sum.java now checks for >= rather than > just in case
+	SimpleBreeder now can reduce the population size gradually.
+	Added some efficiency improvements to SteadyStateEvolutionState
